--- a/app/src/main/res/layout/list_recycler.xml
+++ b/app/src/main/res/layout/list_recycler.xml
@@ -1,21 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <android.support.v7.widget.RecyclerView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/list"
-        android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true" />
-
-    <ProgressBar
-        android:id="@+id/progress"
-        style="?android:attr/progressBarStyleHorizontal"
+    <fragment
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:indeterminate="true"
-        android:layout_margin="10dp"
-        android:layout_gravity="center" />
-</FrameLayout>
+        android:layout_height="match_parent"
+        android:id="@+id/fragment_titre_news"
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true"
+        android:name="com.dia.mous.lecteurdenews.Fragment.TitreNewsActivityFragment">
+    </fragment>
+
+</LinearLayout>
